<resources>
    <string name="app_name">MobileProject</string>
    <string name="formName">Форма регистрации</string>
    <string name="formRequired">Обязательно*</string>
    <string name='formEnterName'>Ваше имя</string>
    <string name="formEnterName_Done">Ваше имя:</string>
    <string name='formEnterPassword'>Введите пароль</string>
    <string name="formEnterAge">Ваш возраст</string>
    <string name="formEnterAge_Done">Ваш возраст:</string>
    <string name='formEnterGender'>Выберите пол:</string>
    <string name="formEnterGender_Male">Мужской</string>
    <string name="formEnterGender_Female">Женский</string>
    <string name="formEnterGender_Done">Ваш пол:</string>
    <string name="formNext">Дальше</string>
    <string name="formChangeBg">Сменить фон</string>
    <string name="formFinalInfo">Информация</string>
    <string name="profilepic">profilePic</string>
    <string name="someText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</string>

</resources>